# LightManager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakelists.txt  Main.qml  app.cpp  app.h  app.qrc  main.cpp  qtquickcontrols2.conf
lib/: CMakeLists.txt  atransport.cpp  atransport.h  messagedispatcher.cpp  messagedispatcher.h  serialtransport.cpp  serialtransport.h  serialtransportfactory.cpp  serialtransportfactory.h
tests/: CMakeLists.txt  app_test.cpp  messagedispatchertest.cpp  mockmessagedispatcher.cpp  mockmessagedispatcher.h  mockserialtransport.h  mockseriltransport.cpp  qstringoutput.h
